src/test/deca/syntax/parser/invalid/ineq_expr_assign.deca
// test parser, l'instruction "if" contient un opérateur de comparaison "=" non autorisé

int x = 5;
int y = 8;
if (x = y) {
    println("x est égal à y");
} else {
    println("x est différent de y");
}